--- a/views/myExperiences.hbs
+++ b/views/myExperiences.hbs
@@ -2,10 +2,10 @@
 
 <div class="marco">
   {{#each experiences}}
-    <div class="marco" >
+    <div class="marco">
       {{titulo}}
-      {{texto}}
-      {{imagenes}}
+      {{!-- {{texto}}
+      {{imagenes}} --}}
       {{filtro}}
       <a href="/myExperiences/{{_id}}">Visitar</a>
     </div>
