--- a/views/userDetails.hbs
+++ b/views/userDetails.hbs
@@ -1,4 +1,5 @@
-<div><h1>Informacion</h1>
+<div>
+  <h1>Informacion</h1>
   <h3>{{user.username}}</h3>
   <h4>{{user.email}}</h4>
   <img src="{{user.profileImg}}" alt="img" />
