--- a/views/experienceNew.hbs
+++ b/views/experienceNew.hbs
@@ -1,41 +1,28 @@
-
-      <form
-        action="/myExperiences/new"
-        method="POST"
-        enctype="multipart/form-data"
-      >
-      <div>
-        <label for="titulo">Titulo</label>
-        <input type="text" name="titulo" id="tituli">
-      </div>
-      <div>
-          <label for="texto">Texto:</label>
-          <textarea type="text" id="texto" name="texto" rows="10"></textarea>
-        </div>
-        <div>
-        <div>
-
-        <div>
-          <label for="imagen">Imágenes:</label>
-          <input
-            type="file"
-            id="imagen"
-            name="imagen"
-            accept="image/*"
-            max="5"
-          />
-        </div>
-        <div>
-          <label for="filtro">Filtro:</label>
-          <select id="filtro" name="filtro" multiple>
-            <option value="pais">País</option>
-            <option value="ciudad">Ciudad</option>
-            <option value="naturaleza">Naturaleza</option>
-            <option value="ocio">Ocio</option>
-            <option value="precio">Precio</option>
-          </select>
-        </div>
-        <div>
-          <button type="submit">Crear Experiencia</button>
-        </div>
-      </form>
+<h1>Crear Experiencia</h1>
+<form action="/myExperiences/new" method="POST" enctype="multipart/form-data">
+  <div class="mb-3">
+    <label for="titulo" class="form-label">Titulo</label>
+    <input type="text" class="form-control" id="titulo" name="titulo">
+  </div>
+  <div class="mb-3">
+    <label for="texto" class="form-label">Texto:</label>
+    <textarea class="form-control" id="texto" name="texto" rows="10"></textarea>
+  </div>
+  <div class="mb-3">
+    <label for="imagen" class="form-label">Imágenes:</label>
+    <input type="file" class="form-control" id="imagen" name="imagen" accept="image/*" max="5">
+  </div>
+  <div class="mb-3">
+    <label for="filtro" class="form-label">Filtro:</label>
+    <select class="form-select" id="filtro" name="filtro" multiple>
+      <option value="pais">País</option>
+      <option value="ciudad">Ciudad</option>
+      <option value="naturaleza">Naturaleza</option>
+      <option value="ocio">Ocio</option>
+      <option value="precio">Precio</option>
+    </select>
+  </div>
+  <div class="mb-3">
+    <button type="submit" class="btn btn-primary">Crear Experiencia</button>
+  </div>
+</form>
