--- a/views/reviewNew.hbs
+++ b/views/reviewNew.hbs
@@ -1,22 +1,23 @@
-    <header>
-      <h1>Nueva reseña</h1>
-    </header>
-    <main>
-      <form action="/myExperiences/{{experienceId}}/reviews/new" method="POST">
-        <div>
-          <label for="title">Título:</label>
-          <input type="text" id="title" name="title" />
-        </div>
-        <div>
-          <label for="comment">Comentario:</label>
-          <textarea type="text" id="comment" name="comment" rows="10"></textarea>
-        </div>
-        <div>
-          <label for="rating">Rating:</label>
-          <input type="number" id="rating" name="rating" min="0" max="10"></input>
-        </div>
+<header>
+  <h1>Nueva reseña</h1>
+</header>
+<main>
+  <form action="/myExperiences/{{experienceId}}/reviews/new" method="POST">
+    <div class="mb-3">
+      <label for="title" class="form-label">Título:</label>
+      <input type="text" class="form-control" id="title" name="title" />
+    </div>
+    <div class="mb-3">
+      <label for="comment" class="form-label">Comentario:</label>
+      <textarea class="form-control" id="comment" name="comment" rows="10"></textarea>
+    </div>
+    <div class="mb-3">
+      <label for="rating" class="form-label">Rating:</label>
+      <input type="number" class="form-control" id="rating" name="rating" min="0" max="10"></input>
+    </div>
 
-        <div>
-          <button type="submit">Crear Reseña</button>
-        </div>
-      </form>
+    <div class="mb-3">
+      <button type="submit" class="btn btn-primary">Crear Reseña</button>
+    </div>
+  </form>
+</main>
