--- a/views/search-places-results.hbs
+++ b/views/search-places-results.hbs
@@ -19,31 +19,14 @@
       <div id="map-{{lat}}/{{lng}}" style="width: 100%; height: 400px;"></div>
       console.log({{lat}}/{{lng}})
       <form action="/create-experience-with-api" method="post">
-        {{!-- <input type="text" name="lat" value="{{lat}}" hidden />
-        <input type="text" name="lng" value="{{lng}}" hidden /> --}}
-        {{! <button type="submit">Crear experiencia</button> }}
       </form>
     </div>
   {{/each}}
 </div>
 
-{{!-- <div class="pagination">
-  {{#if (gt totalPages 1)}}
-    {{#if (ne currentPage 1)}}
-      <a href="/search-places?page={{sub currentPage 1}}">Anterior</a>
-    {{/if}}
-    {{#each (range 1 totalPages)}}
-      {{#if (eq this currentPage)}}
-        <span>{{this}}</span>
-      {{else}}
-        <a href="/search-places?page={{this}}">{{this}}</a>
-      {{/if}}
-    {{/each}}
-    {{#if (ne currentPage totalPages)}}
-      <a href="/search-places?page={{add currentPage 1}}">Siguiente</a>
-    {{/if}}
-  {{/if}}
-</div> --}}
-
+<span id="pagina"></span>
+<button id="cargar" onClick="loadNextResults()">
+  Cargar mas resultados
+</button>
 <script src="/js/create-map.js"></script>
 <script src="/js/chart.js"></script>
