--- a/views/experienceDetails.hbs
+++ b/views/experienceDetails.hbs
@@ -5,7 +5,7 @@
     <div class="experience-izquierda">
       {{experience.titulo}}
      <div>
-   <textarea class="textarea" readonly>{{experience.texto}}</textarea>
+   <textarea readonly>{{experience.texto}}</textarea>
   <img src="{{experience.imagen}}" alt="" />
       {{experience.filtro}}
       <div class="buttons-experience">
@@ -18,8 +18,11 @@
         <p>Fecha de creación: {{experience.createdAt}}</p>
       </div>
     </div>
-
- 
+  <a
+    href="/myExperiences/{{experience.id}}/reviews/new"
+    class="btn btn-dark"
+  >Añadir reseña</a>
+  <br></br>
     <div class="reviews">
       <div class="title-reviews">
         <h3>Reseñas</h3>
@@ -36,10 +39,6 @@
         </div>
       {{/each}}
     </div>
-    <a
-    href="/myExperiences/{{experience.id}}/reviews/new"
-    class="btn btn-dark"
-  >Añadir reseña</a>
   </div>
 </div>
 
