--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,17 +8,13 @@
    <title>{{siteTitle}}</title>
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">   
    <link rel="stylesheet" href="/stylesheets/style.css" />
-   {{!-- link mapa --}}
 <link href='https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css' rel='stylesheet' /> 
-{{!-- <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet" /> --}}
 <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css"/>
 </head>
 
 <body>
- {{!-- para acceder a la imagen de favicon , es "../" --}}
-
     <nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-dark">
-       <img src="/favicon.png" alt="Trotamundoss" width="50" height="50">
+       <img src="/images/favicon.png" alt="Trotamundoss" width="50" height="50">
     <div class="container-fluid">
        <a class="navbar-brand" href="/">{{siteTitle}}</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,9 +22,6 @@
        </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          {{!-- <li class="nav-item">
-            <a class="nav-link" href="/">Inicio</a>
-          </li> --}}
           {{#if user.username}} 
 
               <li class="nav-item">
@@ -39,9 +32,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="/myExperiences">Mis experiencias</a>
               </li>
-              {{!-- <li class="nav-item">
-                <a class="nav-link" href="/search-places">Buscar sitios</a>
-              </li> --}}
               <li class="nav-item">
                 <a class="nav-link" href="/user/{{user._id}}">Ajustes</a>
               </li>
@@ -59,7 +49,7 @@
       </div>
     </div>
     </nav>
-  <div class="container mt-">
+  <div class="container mt-5">
    {{{body}}}
     </div>
 
