--- a/views/search-places-results.hbs
+++ b/views/search-places-results.hbs
@@ -16,8 +16,8 @@
       <p>number of reviews: {{numReviews}}</p>
       <p>Details: <a href="{{details}}">Ver detalles</a></p>
       <canvas id="myChart"></canvas>
-      <div id="map-{{lat}}/{{lng}}" style="width: 100%; height: 400px;"></div>
-      console.log({{lat}}/{{lng}})
+      <div id="map-{{lat}}/{{lng}}" style="width: 100%; height: 700px;"></div>
+      {{!-- console.log({{lat}}/{{lng}}) --}}
       <form action="/create-experience-with-api" method="post">
       </form>
     </div>
